@@ -49,3 +49,4 @@ Youness Alaoui <kakaroto@kakaroto.homelinux.net>
 Bluezery <ohpowel@gmail.com>
 Doyoun Kang <wayofmine@gmail.com> <doyoun.kang@samsung.com>
 Haifeng Deng <haifeng.deng@samsung.com>
+Jérémy Zurcher <jeremy@asynk.ch>
