@@ -233,7 +233,7 @@ _ecore_evas_psl1ght_free(Ecore_Evas *ee)
 }
 
 static void
-_ecore_evas_psl1ght_callback_delete_request_set(Ecore_Evas *ee, void (*func) (Ecore_Evas *ee))
+_ecore_evas_psl1ght_callback_delete_request_set(Ecore_Evas *ee, Ecore_Evas_Event_Cb func)
 {
    ee->func.fn_delete_request = func;
 }
